提交：能显示出正常的三种模式，但是设置后无法即时显示的版本

--- a/data/config.ini
+++ b/data/config.ini
@@ -1,5 +1,5 @@
 [display]
-mode = single_line
+mode = double_line_mixed_font
 lines_per_display = 1
 font_primary = Arial 16
 font_secondary = Arial 12
