--- a/data/config.ini
+++ b/data/config.ini
@@ -1,13 +1,13 @@
 [display]
-mode = double_line_mixed_font
+mode = single_line
 lines_per_display = 1
 font_primary = Arial 16
 font_secondary = Arial 12
 
 [colors]
-background = SystemButtonFace
-foreground = SystemButtonText
-opacity = 1.0
+background = #9da69b
+foreground = #400000
+opacity = 0.2
 
 [behavior]
 auto_switch_interval = 5
