提交：即时切换设置版本

--- a/data/config.ini
+++ b/data/config.ini
@@ -1,13 +1,13 @@
 [display]
-mode = single_line
+mode = double_line_mixed_font
 lines_per_display = 1
-font_primary = Arial 16
-font_secondary = Arial 12
+font_primary = System 30
+font_secondary = System 15
 
 [colors]
-background = #9da69b
-foreground = #400000
-opacity = 0.2
+background = SystemButtonFace
+foreground = SystemButtonText
+opacity = 0.8
 
 [behavior]
 auto_switch_interval = 5
