提交：带几个默认字体的版本

--- a/data/config.ini
+++ b/data/config.ini
@@ -1,8 +1,8 @@
 [display]
-mode = double_line_mixed_font
+mode = single_line
 lines_per_display = 1
-font_primary = System 30
-font_secondary = System 15
+font_primary = Lucida Console 15
+font_secondary = Lucida Console 10
 
 [colors]
 background = SystemButtonFace
@@ -17,5 +17,5 @@ pause_on_click = True
 folder_path = E:\\大三下作业收集\\Ebooks\\单词本
 
 [window]
-geometry = 495x92+982+118
+geometry = 495x92+1045+60
 
