提交：置顶和暂停的版本

--- a/data/config.ini
+++ b/data/config.ini
@@ -1,8 +1,8 @@
 [display]
 mode = single_line
 lines_per_display = 1
-font_primary = Lucida Console 15
-font_secondary = Lucida Console 10
+font_primary = Times New Roman 15
+font_secondary = Lucida Console 12
 
 [colors]
 background = SystemButtonFace
@@ -10,12 +10,13 @@ foreground = SystemButtonText
 opacity = 0.8
 
 [behavior]
-auto_switch_interval = 5
+auto_switch_interval = 2
 pause_on_click = True
 
 [files]
 folder_path = E:\\大三下作业收集\\Ebooks\\单词本
 
 [window]
-geometry = 495x92+1045+60
+geometry = 480x79+1090+56
+always_on_top = True
 
