提交：相对路径可以直接填写assets的版本

--- a/data/config.ini
+++ b/data/config.ini
@@ -1,8 +1,8 @@
 [display]
 mode = single_line
 lines_per_display = 1
-font_primary = Times New Roman 15
-font_secondary = Lucida Console 12
+font_primary = Lucida Console 12
+font_secondary = Lucida Console 10
 
 [colors]
 background = SystemButtonFace
@@ -10,13 +10,13 @@ foreground = SystemButtonText
 opacity = 0.8
 
 [behavior]
-auto_switch_interval = 2
+auto_switch_interval = 3
 pause_on_click = True
 
 [files]
-folder_path = E:\\大三下作业收集\\Ebooks\\单词本
+folder_path = E:\Project3s\MyriadTruths\assets
 
 [window]
-geometry = 480x79+1024+173
+geometry = 458x69+1101+147
 always_on_top = True
 
