提交：三种切换模式的版本

--- a/data/config.ini
+++ b/data/config.ini
@@ -1,22 +1,27 @@
 [display]
 mode = single_line
 lines_per_display = 1
-font_primary = Lucida Console 12
+font_primary = Arial 12
 font_secondary = Lucida Console 10
 
 [colors]
 background = SystemButtonFace
 foreground = SystemButtonText
-opacity = 0.8
+opacity = 0.7
 
 [behavior]
 auto_switch_interval = 3
 pause_on_click = True
+switch_mode = sequential
 
 [files]
 folder_path = E:\Project3s\MyriadTruths\assets
 
 [window]
-geometry = 458x69+1101+147
+geometry = 351x64+1073+89
 always_on_top = True
+
+[progress]
+current_file_index = 0
+current_line_index = 12
 
