--- a/data/config.ini
+++ b/data/config.ini
@@ -5,12 +5,12 @@ font_primary = Arial 12
 font_secondary = Lucida Console 10
 
 [colors]
-background = SystemButtonFace
-foreground = SystemButtonText
+background = #800000
+foreground = #ffffff
 opacity = 0.7
 
 [behavior]
-auto_switch_interval = 3
+auto_switch_interval = 5
 pause_on_click = True
 switch_mode = sequential
 
@@ -18,10 +18,10 @@ switch_mode = sequential
 folder_path = E:\Project3s\MyriadTruths\assets
 
 [window]
-geometry = 351x64+1073+89
+geometry = 351x64+1097+86
 always_on_top = True
 
 [progress]
 current_file_index = 0
-current_line_index = 12
+current_line_index = 143
 
