修复：切换时间

--- a/data/config.ini
+++ b/data/config.ini
@@ -10,18 +10,18 @@ foreground = #ffffff
 opacity = 0.7
 
 [behavior]
-auto_switch_interval = 5
+auto_switch_interval = 4
 pause_on_click = True
-switch_mode = sequential
+switch_mode = random
 
 [files]
 folder_path = E:\Project3s\MyriadTruths\assets
 
 [window]
-geometry = 351x64+1097+86
+geometry = 351x64+1150+93
 always_on_top = True
 
 [progress]
 current_file_index = 0
-current_line_index = 143
+current_line_index = 606
 
