fix:相对路径的修复

--- a/data/config.ini
+++ b/data/config.ini
@@ -1,27 +1,27 @@
 [display]
 mode = single_line
 lines_per_display = 1
-font_primary = Arial 12
+font_primary = Arial 11
 font_secondary = Lucida Console 10
 
 [colors]
-background = #800000
+background = #000000
 foreground = #ffffff
-opacity = 0.7
+opacity = 0.5
 
 [behavior]
-auto_switch_interval = 4
+auto_switch_interval = 1
 pause_on_click = True
-switch_mode = random
+switch_mode = sequential
 
 [files]
-folder_path = E:\Project3s\MyriadTruths\assets
+folder_path = assets
 
 [window]
-geometry = 351x64+1150+93
+geometry = 344x52+1161+77
 always_on_top = True
 
 [progress]
 current_file_index = 0
-current_line_index = 606
+current_line_index = 748
 
