fix:显示模式和切换模式的修复

--- a/data/config.ini
+++ b/data/config.ini
@@ -1,7 +1,7 @@
 [display]
-mode = single_line
+mode = double_line_mixed_font
 lines_per_display = 1
-font_primary = Arial 11
+font_primary = Lucida Console 12
 font_secondary = Lucida Console 10
 
 [colors]
@@ -10,7 +10,7 @@ foreground = #ffffff
 opacity = 0.5
 
 [behavior]
-auto_switch_interval = 1
+auto_switch_interval = 2
 pause_on_click = True
 switch_mode = sequential
 
@@ -18,10 +18,10 @@ switch_mode = sequential
 folder_path = assets
 
 [window]
-geometry = 344x52+1161+77
+geometry = 343x100+1182+116
 always_on_top = True
 
 [progress]
 current_file_index = 0
-current_line_index = 748
+current_line_index = 112
 
