--- a/data/config.ini
+++ b/data/config.ini
@@ -1,5 +1,5 @@
 [display]
-mode = double_line_mixed_font
+mode = single_line
 lines_per_display = 1
 font_primary = Lucida Console 12
 font_secondary = Lucida Console 10
@@ -18,10 +18,10 @@ switch_mode = sequential
 folder_path = assets
 
 [window]
-geometry = 341x67+1176+22
+geometry = 323x59+1190+51
 always_on_top = True
 
 [progress]
 current_file_index = 0
-current_line_index = 1586
+current_line_index = 17
 
