--- a/data/config.ini
+++ b/data/config.ini
@@ -1,27 +1,27 @@
 [display]
-mode = single_line
+mode = double_line_mixed_font
 lines_per_display = 1
 font_primary = Lucida Console 12
-font_secondary = Lucida Console 10
+font_secondary = Lucida Console 11
 
 [colors]
 background = #000000
 foreground = #ffffff
-opacity = 0.5
+opacity = 0.7
 
 [behavior]
 auto_switch_interval = 3
 pause_on_click = True
-switch_mode = sequential
+switch_mode = random
 
 [files]
 folder_path = assets
 
 [window]
-geometry = 323x59+1190+51
+geometry = 323x59+1152+79
 always_on_top = True
 
 [progress]
 current_file_index = 0
-current_line_index = 0
+current_line_index = 48
 
